--- a/public/styles.css
+++ b/public/styles.css
@@ -5,38 +5,38 @@ body{
 h2{
     font-size: 18px;
     padding: 10px 20px;
-    color: #575ed8;
+    color: #2980b9;
 }
 
 #umit-chat{
-    max-width: 600px;
+    max-width: 50%;
     margin: 30px auto;
-    border: 1px solid #ddd;
+    border: 1px solid #bdc3c7;
     box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
     border-radius: 2px;
 }
 
 #chat-window{
-    height: 400px;
+    height: 600px;
     overflow: auto;
-    background: #f9f9f9;
+    background-image: url('http://wallpaperswide.com/download/colorful_blurry_background-wallpaper-1600x900.jpg');
 }
 
 #output p{
     padding: 14px 0px;
     margin: 0 20px;
-    border-bottom: 1px solid #e9e9e9;
-    color: #555;
+    border-bottom: 1px solid #fff;
+    color: #2c3e50;
 }
 
 #feedback p{
-    color: #aaa;
+    color: #34495e;
     padding: 14px 0px;
     margin: 0 20px;
 }
 
 #output strong{
-    color: #575ed8;
+    color: #2c3e50;
 }
 
 label{
@@ -48,20 +48,21 @@ label{
 input{
     padding: 10px 20px;
     box-sizing: border-box;
-    background: #eee;
     border: 0;
     display: block;
     width: 100%;
     background: #fff;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #fff;
+    color: #000;
     font-family: Nunito;
     font-size: 16px;
 }
 
 button{
-    background: #575ed8;
-    color: #fff;
-    font-size: 18px;
+    background: #2980b9;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 600;
     border: 0;
     padding: 12px 0;
     width: 100%;
